[tool.poetry]
name = "c2"
version = "0.1.0"
description = "SkyScan Command and Control MQTT client to prioritize which aircraft to point at"
authors = ["Luke <lberndt@iqt.org>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
schedule = "^1.1.0"
pandas = "^2.0.3"
coloredlogs = "^15.0.1"
numpy = "^1.26.4"
numpy-quaternion = "^2023.0.2"
zstandard = "0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
